@@ -87,19 +87,12 @@ extern SOCKET caml_win32_socket(int domain, int type, int protocol,
                                 BOOL inherit);
 
 extern void caml_win32_maperr(DWORD errcode);
-#define win32_maperr caml_win32_maperr
 #endif /* _WIN32 */
 
 #define Nothing ((value) 0)
 
 extern value caml_unix_error_of_code (int errcode);
 extern int caml_unix_code_of_unix_error (value error);
-
-/* Compatibility definitions for the pre-5.0 names of these functions */
-#ifndef CAML_BUILDING_UNIX
-#define unix_error_of_code caml_unix_error_of_code
-#define code_of_unix_error caml_unix_code_of_unix_error
-#endif /* CAML_BUILDING_UNIX */
 
 CAMLnoreturn_start
 extern void caml_unix_error (int errcode, const char * cmdname, value arg)
@@ -108,12 +101,6 @@ CAMLnoreturn_end;
 CAMLnoreturn_start
 extern void caml_uerror (const char * cmdname, value arg)
 CAMLnoreturn_end;
-
-/* Compatibility definitions for the pre-5.0 names of these functions */
-#ifndef CAML_BUILDING_UNIX
-#define uerror caml_uerror
-#define unix_error caml_unix_error
-#endif /* CAML_BUILDING_UNIX */
 
 extern void caml_unix_check_path(value path, const char * cmdname);
 
@@ -135,7 +122,37 @@ extern int caml_win32_set_inherit(HANDLE fd, BOOL inherit);
 #else
 extern void caml_unix_set_cloexec(int fd, char * cmdname, value arg);
 extern void caml_unix_clear_cloexec(int fd, char * cmdname, value arg);
-#endif
+#endif /* _WIN32 */
+
+/* Compatibility definitions for the pre-5.0 names of these functions */
+#ifndef CAML_BUILDING_UNIX
+#ifdef _WIN32
+#define win_alloc_handle caml_win32_alloc_handle
+#define win_alloc_socket caml_win32_alloc_socket
+#define win_CRT_fd_of_filedescr caml_win32_CRT_fd_of_filedescr
+#define win32_maperr caml_win32_maperr
+#endif /* _WIN32 */
+
+#define unix_error_of_code caml_unix_error_of_code
+#define code_of_unix_error caml_unix_code_of_unix_error
+
+#define uerror caml_uerror
+#define unix_error caml_unix_error
+
+#define cstringvect caml_unix_cstringvect
+#define cstringvect_free caml_unix_cstringvect_free
+
+#define unix_cloexec_default caml_unix_cloexec_default
+#define unix_cloexec_p caml_unix_cloexec_p
+
+#ifdef _WIN32
+#define win_set_inherit caml_win32_set_inherit
+#define win_set_cloexec caml_win32_set_cloexec
+#else
+#define unix_set_cloexec caml_unix_set_cloexec
+#define unix_clear_cloexec caml_unix_clear_cloexec
+#endif /* _WIN32 */
+#endif /* CAML_BUILDING_UNIX */
 
 #ifdef __cplusplus
 }
